--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "laravel/passport": "^9.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "react/event-loop": "1.1.1"
+        "lcobucci/jwt": "3.3.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
